Fixat scrollbar för små skärmar

--- a/Shared/NavMenu.razor.css
+++ b/Shared/NavMenu.razor.css
@@ -51,7 +51,7 @@
     color: white;
 }
 
-@media (min-width: 641px) {
+@media {
     .navbar-toggler {
         display: none;
     }
@@ -59,28 +59,5 @@
     .collapse {
         /* Never collapse the sidebar for wide screens */
         display: block;
-    }
-    
-    .nav-scrollable {
-        /* Allow sidebar to scroll for tall menus */
-        height: calc(100vh - 3.5rem);
-        overflow-y: auto;
-    }
-}
-
-@media (min-width: 200px) {
-    .navbar-toggler {
-        display: none;
-    }
-
-    .collapse {
-        /* Never collapse the sidebar for wide screens */
-        display: block;
-    }
-
-    .nav-scrollable {
-        /* Allow sidebar to scroll for tall menus */
-        height: calc(20vh - 3.5rem);
-        overflow-y: auto;
     }
 }
